Operators, CastOperators, ExtensionMethods, NonGenericCollections, GenericCollections, Delegates, Actions and Functions.

--- a/AdvancedCSharp/Collections/Collections.csproj
+++ b/AdvancedCSharp/Collections/Collections.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E2E9F526-DBB1-4C07-AF69-9638859116F7}</ProjectGuid>
+    <ProjectGuid>{94605ADA-D857-472D-8F7C-567412908566}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OperatorOverloadEquality</RootNamespace>
-    <AssemblyName>OperatorOverloadEquality</AssemblyName>
+    <RootNamespace>Collections</RootNamespace>
+    <AssemblyName>Collections</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="GenericCollections.cs" />
+    <Compile Include="NonGenericCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
