--- a/AdvancedCSharp/DelegateFunctionAction/DelegateFunctionAction.csproj
+++ b/AdvancedCSharp/DelegateFunctionAction/DelegateFunctionAction.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30C67A2E-F098-487B-B677-50236B8830EE}</ProjectGuid>
+    <ProjectGuid>{1462BB44-7CF9-4DEA-808E-2BDE4C2E59EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OperatorOverload</RootNamespace>
-    <AssemblyName>OperatorOverload</AssemblyName>
+    <RootNamespace>DelegateFunctionAction</RootNamespace>
+    <AssemblyName>DelegateFunctionAction</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
+    <Compile Include="Delegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
