--- a/AdvancedCSharp/OperatorOverloadEquality/OperatorsOverload.csproj
+++ b/AdvancedCSharp/OperatorOverloadEquality/OperatorsOverload.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30C67A2E-F098-487B-B677-50236B8830EE}</ProjectGuid>
+    <ProjectGuid>{E2E9F526-DBB1-4C07-AF69-9638859116F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OperatorOverload</RootNamespace>
-    <AssemblyName>OperatorOverload</AssemblyName>
+    <RootNamespace>OperatorsOverload</RootNamespace>
+    <AssemblyName>OperatorsOverload</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CastOperators.cs" />
+    <Compile Include="Equal.cs" />
+    <Compile Include="Operators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
