--- a/AdvancedCSharp/Generics/Generics.csproj
+++ b/AdvancedCSharp/Generics/Generics.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basic.cs" />
+    <Compile Include="Classes.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
