--- a/AdvancedCSharp/Linq/Linq.csproj
+++ b/AdvancedCSharp/Linq/Linq.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeferredExecution.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Select.cs" />
     <Compile Include="Where.cs" />
