--- a/AdvancedCSharp/Linq/Linq.csproj
+++ b/AdvancedCSharp/Linq/Linq.csproj
@@ -42,10 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregation.cs" />
     <Compile Include="DeferredExecution.cs" />
     <Compile Include="GroupBy.cs" />
     <Compile Include="LoopVsLinq.cs" />
     <Compile Include="OrderBy.cs" />
+    <Compile Include="Quantifiers.cs" />
     <Compile Include="UtilityExtensions.cs" />
     <Compile Include="ImmediateOperators.cs" />
     <Compile Include="Person.cs" />
