--- a/AdvancedCSharp/Variance/Variance.csproj
+++ b/AdvancedCSharp/Variance/Variance.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1462BB44-7CF9-4DEA-808E-2BDE4C2E59EE}</ProjectGuid>
+    <ProjectGuid>{4B66744E-971C-441E-9461-0DF425409031}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DelegateFunctionAction</RootNamespace>
-    <AssemblyName>DelegateFunctionAction</AssemblyName>
+    <RootNamespace>Variance</RootNamespace>
+    <AssemblyName>Variance</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,8 +37,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action.cs" />
-    <Compile Include="Delegate.cs" />
+    <Compile Include="Variance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
