rework equitable example

--- a/AdvancedCSharp/OperatorOverloadEquality/OperatorsOverload.csproj
+++ b/AdvancedCSharp/OperatorOverloadEquality/OperatorsOverload.csproj
@@ -38,8 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CastOperators.cs" />
-    <Compile Include="Equal.cs" />
-    <Compile Include="Equals.cs" />
+    <Compile Include="Equitable.cs" />
     <Compile Include="Operators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
